# hoardster

./: README.md  README_zh.md  index.html  package.json  release_notes.txt
.gemini/skills/release-version/: SKILL.md
.github/workflows/: release.yml
src/: App.tsx  i18n.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  epic.rs  lib.rs  main.rs  scanner.rs  steam_api.rs
src/components/: Dashboard.tsx  EpicGamesPanel.tsx  FilterBar.tsx  FullIndexPanel.tsx  Header.tsx  NewsPanel.tsx  PopularPanel.tsx  PosterWall.tsx  SRPanel.tsx  SettingsPanel.tsx  StatsGrid.tsx  SteamGamesPanel.tsx  TabNav.tsx  Torrents1337Panel.tsx
src/components/shared/: FilterSelect.tsx  Pagination.tsx  SearchBox.tsx  SortSelect.tsx  ViewToggle.tsx
src/hooks/: useGames.ts  useScrape.ts
src/mocks/: mockTorrents.ts  newsData.ts  popularGames.ts  releaseData.ts
src/pages/: HomePage.tsx  LocalGamesPage.tsx  RadarPage.tsx  SettingsPage.tsx
src/stores/: useAppStore.ts  useLocalGamesStore.ts  useRadarStore.ts  useSettingsStore.ts
src/types/: index.ts
