[package]
name = "hoardster"
version = "1.0.9"
description = "Tauri local game index application"
edition = "2021"

[lib]
name = "hoardster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
regex = "1.10"
lazy_static = "1.4"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
jwalk = "0.8.1"
rayon = "1.12.0"
tauri-plugin-shell = "2.3.5"
